fix: adjust spacing on contact and careers

--- a/src/app/(frontend)/contact/contact.module.css
+++ b/src/app/(frontend)/contact/contact.module.css
@@ -1,6 +1,5 @@
 .contact {
   .sub-nav {
-    padding: 200px 0 0;
     margin: 0 84px;
     font-family: var(--ap-bold);
     text-transform: uppercase;
@@ -38,11 +37,9 @@
     margin-top: 80px;
 
     .location-and-hours-body {
-      // flex-grow: 1;
     }
 
     .contact-body {
-      // flex-grow: 1;
       margin-left: 100px;
     }
 
@@ -85,7 +82,6 @@
       display: flex;
       flex-direction: column;
       row-gap: 52px;
-      // flex-grow: 1;
       width: 33%;
     }
 
